// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectField component matches snapshot when field has error but untouched 1`] = `
<FormItem
  help={null}
  label={null}
  validateStatus={false}
>
  <ForwardRef(InternalSelect)
    autoClearSearchValue={false}
    defaultHelp={null}
    name="fieldName"
    onBlur={[MockFunction]}
    onChange={[MockFunction]}
    optionLabelProp="label"
    passThrough="prop"
    placeholder="{Translation id: fake.placeholder}"
    value=""
  >
    <Option
      key="test_1"
      label="test_1"
      value="test_1"
    >
      test_1
    </Option>
    <Option
      key="test_2"
      label="test_2"
      value="test_2"
    >
      test_2
    </Option>
  </ForwardRef(InternalSelect)>
</FormItem>
`;

exports[`SelectField component matches snapshot when field has status 1`] = `
<FormItem
  help={null}
  label={null}
>
  <ForwardRef(InternalSelect)
    autoClearSearchValue={false}
    defaultHelp={null}
    name="fieldName"
    onBlur={[MockFunction]}
    onChange={[MockFunction]}
    optionLabelProp="label"
    passThrough="prop"
    placeholder="{Translation id: fake.placeholder}"
    value=""
  >
    <Option
      key="test_1"
      label="test_1"
      value="test_1"
    >
      test_1
    </Option>
    <Option
      key="test_2"
      label="test_2"
      value="test_2"
    >
      test_2
    </Option>
  </ForwardRef(InternalSelect)>
</FormItem>
`;

exports[`SelectField component matches snapshot when field is touched and has error 1`] = `
<FormItem
  help={
    <InputHelp
      icon={null}
      text={
        Object {
          "id": "test.error",
        }
      }
      type="danger"
    />
  }
  label={null}
  validateStatus="error"
>
  <ForwardRef(InternalSelect)
    autoClearSearchValue={false}
    defaultHelp={null}
    name="fieldName"
    onBlur={[MockFunction]}
    onChange={[MockFunction]}
    optionLabelProp="label"
    passThrough="prop"
    placeholder="{Translation id: fake.placeholder}"
    value=""
  >
    <Option
      key="test_1"
      label="test_1"
      value="test_1"
    >
      test_1
    </Option>
    <Option
      key="test_2"
      label="test_2"
      value="test_2"
    >
      test_2
    </Option>
  </ForwardRef(InternalSelect)>
</FormItem>
`;

exports[`SelectField component matches snapshot when field is touched but has no error 1`] = `
<FormItem
  help={null}
  label={null}
>
  <ForwardRef(InternalSelect)
    autoClearSearchValue={false}
    defaultHelp={null}
    name="fieldName"
    onBlur={[MockFunction]}
    onChange={[MockFunction]}
    optionLabelProp="label"
    passThrough="prop"
    placeholder="{Translation id: fake.placeholder}"
    value=""
  >
    <Option
      key="test_1"
      label="test_1"
      value="test_1"
    >
      test_1
    </Option>
    <Option
      key="test_2"
      label="test_2"
      value="test_2"
    >
      test_2
    </Option>
  </ForwardRef(InternalSelect)>
</FormItem>
`;

exports[`SelectField component matches snapshot when field tooltip not empty 1`] = `
<FormItem
  help={
    <InputHelp
      icon={null}
      text={
        Object {
          "id": "text.test",
        }
      }
      type={null}
    />
  }
  label={null}
>
  <ForwardRef(InternalSelect)
    autoClearSearchValue={false}
    defaultHelp={null}
    name="fieldName"
    onBlur={[MockFunction]}
    onChange={[MockFunction]}
    optionLabelProp="label"
    passThrough="prop"
    placeholder="{Translation id: fake.placeholder}"
    value=""
  >
    <Option
      key="test_1"
      label="test_1"
      value="test_1"
    >
      test_1
    </Option>
    <Option
      key="test_2"
      label="test_2"
      value="test_2"
    >
      test_2
    </Option>
  </ForwardRef(InternalSelect)>
</FormItem>
`;

exports[`SelectField component matches snapshot with \`disabled\` 1`] = `
<FormItem
  help={null}
  label={null}
>
  <ForwardRef(InternalSelect)
    autoClearSearchValue={false}
    defaultHelp={null}
    disabled={true}
    name="fieldName"
    onBlur={[MockFunction]}
    onChange={[MockFunction]}
    optionLabelProp="label"
    passThrough="prop"
    placeholder="{Translation id: fake.placeholder}"
    value=""
  >
    <Option
      key="test_1"
      label="test_1"
      value="test_1"
    >
      test_1
    </Option>
    <Option
      key="test_2"
      label="test_2"
      value="test_2"
    >
      test_2
    </Option>
  </ForwardRef(InternalSelect)>
</FormItem>
`;

exports[`SelectField component matches snapshot with \`id\` 1`] = `
<FormItem
  help={null}
  label={null}
>
  <ForwardRef(InternalSelect)
    autoClearSearchValue={false}
    defaultHelp={null}
    id="test-id"
    name="fieldName"
    onBlur={[MockFunction]}
    onChange={[MockFunction]}
    optionLabelProp="label"
    passThrough="prop"
    placeholder="{Translation id: fake.placeholder}"
    value=""
  >
    <Option
      key="test_1"
      label="test_1"
      value="test_1"
    >
      test_1
    </Option>
    <Option
      key="test_2"
      label="test_2"
      value="test_2"
    >
      test_2
    </Option>
  </ForwardRef(InternalSelect)>
</FormItem>
`;

exports[`SelectField component matches snapshot with \`label\` 1`] = `
<FormItem
  help={null}
  label={
    <span
      className="main-input__label"
    >
      <Memo(FormattedMessage)
        id="test.fieldLabel"
      />
    </span>
  }
>
  <ForwardRef(InternalSelect)
    autoClearSearchValue={false}
    defaultHelp={null}
    name="fieldName"
    onBlur={[MockFunction]}
    onChange={[MockFunction]}
    optionLabelProp="label"
    passThrough="prop"
    placeholder="{Translation id: fake.placeholder}"
    value=""
  >
    <Option
      key="test_1"
      label="test_1"
      value="test_1"
    >
      test_1
    </Option>
    <Option
      key="test_2"
      label="test_2"
      value="test_2"
    >
      test_2
    </Option>
  </ForwardRef(InternalSelect)>
</FormItem>
`;

exports[`SelectField component matches snapshot with choose item 1`] = `
<FormItem
  help={null}
  label={null}
>
  <ForwardRef(InternalSelect)
    autoClearSearchValue={false}
    defaultHelp={null}
    name="fieldName"
    onBlur={[MockFunction]}
    onChange={[MockFunction]}
    optionLabelProp="label"
    passThrough="prop"
    placeholder="{Translation id: fake.placeholder}"
    value="item_1"
  >
    <Option
      key="test_1"
      label="test_1"
      value="test_1"
    >
      test_1
    </Option>
    <Option
      key="test_2"
      label="test_2"
      value="test_2"
    >
      test_2
    </Option>
  </ForwardRef(InternalSelect)>
</FormItem>
`;

exports[`SelectField component matches snapshot with default props 1`] = `
<FormItem
  help={null}
  label={null}
>
  <ForwardRef(InternalSelect)
    autoClearSearchValue={false}
    defaultHelp={null}
    name="fieldName"
    onBlur={[MockFunction]}
    onChange={[MockFunction]}
    optionLabelProp="label"
    passThrough="prop"
    placeholder="{Translation id: fake.placeholder}"
    value=""
  >
    <Option
      key="test_1"
      label="test_1"
      value="test_1"
    >
      test_1
    </Option>
    <Option
      key="test_2"
      label="test_2"
      value="test_2"
    >
      test_2
    </Option>
  </ForwardRef(InternalSelect)>
</FormItem>
`;

exports[`SelectField component matches snapshot with string placeholder 1`] = `
<FormItem
  help={null}
  label={null}
>
  <ForwardRef(InternalSelect)
    autoClearSearchValue={false}
    defaultHelp={null}
    name="fieldName"
    onBlur={[MockFunction]}
    onChange={[MockFunction]}
    optionLabelProp="label"
    passThrough="prop"
    placeholder="Fake placeholder"
    value=""
  >
    <Option
      key="test_1"
      label="test_1"
      value="test_1"
    >
      test_1
    </Option>
    <Option
      key="test_2"
      label="test_2"
      value="test_2"
    >
      test_2
    </Option>
  </ForwardRef(InternalSelect)>
</FormItem>
`;
